[project]
name = "glisse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[glisse]
order = ["dev", "staging", "main"]

[glisse.staging.merged]
hooks = [
      "bumpversion --tag",
      "echo $USER",
]

[glisse.main.merged]
hooks = [
      "bumpversion --tag",
      "date +%F",
]
