[project]
name = "glisse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.21.0",
]

[glisse]
order = ["dev", "staging", "main"]

[glisse.staging.merged]
hooks = [
      "bumpversion --tag",
      "echo $USER",
]

[glisse.main.merged]
hooks = [
      "bumpversion --tag",
      "date +%F",
]

[dependency-groups]
dev = [
    "hypothesis>=6.148.8",
    "isort>=7.0.0",
    "pytest>=9.0.2",
    "ty>=0.0.7",
]
